*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9447 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -376,6 +376,7 @@ module.MobileEnhancements.desc=Sæt med forbedringer til mobile enheder
 module.MatchOrderInterface.desc=Finjustere på kampordre inter-facet.
 module.MatchOrderInterface.PlayedLastMatch.desc=Fremhæver spillere der spillede i den sidste kamp og viser den sidst spillede position og tid, i boksen detaljer
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Fremhæv også på banen
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=﻿Deaktivere for turnerings kampe
 module.MatchOrderInterface.Specialties.desc=Vis spillere specialiteter
 module.MatchOrderInterface.StayOnPage.desc=Bliv på kampordre siden efter afgivning af ordre
 module.MatchOrderInterface.SwapPositions.desc=Tilføj et link til at bytte spillere fra venstre til højre
