--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -374,6 +374,7 @@ module.MobileEnhancements.desc=Set von Erweiterungen für mobile Geräte
 module.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
 module.MatchOrderInterface.PlayedLastMatch.desc=Hebt Spieler hervor, die im letzten Spiel gespielt haben, und zeigt ihre Position und Spieldauer in der Spielerdetailsbox an 
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Betroffene Spieler auch auf dem Spielfeld hervorheben
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Bei Turnierspielen nicht anzeigen
 module.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
 module.MatchOrderInterface.StayOnPage.desc=Nach dem Speichern auf der Aufstellungsseite bleiben
 module.MatchOrderInterface.SwapPositions.desc=Fügt die Möglichkeit die Spielerpositionen zu spiegeln hinzu
