--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -231,7 +231,7 @@ module.ForumPresentation.moved_avatarinfo_fix.desc=מתקן מיקום שגוי 
 module.SkinPlugin.desc=מוסיף את העיצוב שלך להאטריק
 module.CurrencyConverter.desc=המרת מטבעות בהאטריק
 module.MovePlayerStatement.desc=העבר את הצהרות השחקנים אל הדמויות שלהם. אם תצוגת הדמויות מבוטלת, ההצהרות לא יוצגו.
-module.TickerColoring.desc=האירועים השונים אשר יוצגו בטיקר החדשות יסומנו בצבע
+module.TickerColoring.desc=האירועים השונים אשר יוצגו בפס החדשות יסומנו בצבע
 #ExtraShortcuts
 module.ExtraShortcuts.desc=מוסיף קיצורים נוספים לקיצורים הראשיים
 module.ExtraShortcuts.AddLeft.desc=סמן כדי להוסיף סמלים משמאל. בטל סימון כדי להוסיפם מימין
