--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -182,7 +182,7 @@ module.TeamStats.Match.desc=Utakmica
 module.TeamStats.Current_league.desc=Trenutna liga
 module.ExtraPlayerInfo.desc=Prikazati dodatne informacije o igračima na stranici s igračima.
 module.ExtraPlayerInfo.CoachInfo.desc=Prikazati informacije o bivšim i sadašnjim trenerima.
-module.ExtraPlayerInfo.Flag.desc=Nacionalnost igrača prikazati kao zastavicu.
+module.ExtraPlayerInfo.Flag.desc=Nacionalnost igrača prikazati zastavicom.
 module.PlayerFilters.desc=Dodati izbornik za filtriranje igrača po vještinama na stranici s igračima.
 module.HistoryStats.desc=Pregled podataka klupske povijesti.
 module.LargeFlags.desc=Povećati zastavicu u pregledu igrača
