--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -176,6 +176,9 @@ module.TeamStats.General.desc=Informazioni generali (TSI/età)
 module.TeamStats.Speciality.desc=Specialità
 module.TeamStats.Personality.desc=Personalità
 module.TeamStats.Status.desc=Status (cartellini/infortuni)
+module.TeamStats.Attributes.desc=Attributi
+module.TeamStats.Skills.desc=Skills
+module.TeamStats.Match.desc=Partita
 module.TeamStats.Current_league.desc=Serie attuale
 module.ExtraPlayerInfo.desc=Visualizza informazioni extra dei giocatori sulla pagina dei giocatori.
 module.ExtraPlayerInfo.CoachInfo.desc=Aggiunge l'atteggiamento dell'allenatore presente e di quello precedente
@@ -373,6 +376,8 @@ module.SupporterStatsEnhancements.desc=Evidenzia i giocatori attuali della squad
 module.MobileEnhancements.desc=Insieme di miglioramenti per i dispositivi mobili
 module.MatchOrderInterface.desc=Ritocchi sulla pagina per gli ordini partita. 
 module.MatchOrderInterface.PlayedLastMatch.desc=Evidenzia giocatori che hanno giocato nell'ultima partita e mostra la loro posizione e il tempo giocato nel box dei dettagli
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Evidenziato anche sul campo
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disabilita per le partite del torneo
 module.MatchOrderInterface.Specialties.desc=Mostra le specialità del giocatore
 module.MatchOrderInterface.StayOnPage.desc=Rimani nella pagina degli ordini della partita dopo aver inviato la formazione
 module.MatchOrderInterface.SwapPositions.desc=Aggiungi un link per scambiare i giocatori da destra a sinistra e viceversa
@@ -389,12 +394,15 @@ module.RatingsDisplay.HatStats.desc=Come HatStats
 module.RatingsDisplay.HTSums.desc=Come somme di valutazioni di Hattrick
 module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede di  Hattrick per sembrare meno sospetti. Assicurarsi di disattivare tutti gli altri moduli che potrebbero essere rischiosi, soprattutto i moduli "Alert".
 module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esperienza sulla pagina playerStats
+module.YouthTwins.desc=Visualizza il totale di possibili gemelli per i giocatori delle giovanili in collaborazione con Hattrick youthclub. Non hai bisogno di avere un account su Hattrick youthclub per utilizzare questo modulo. Essendo la visualizzazione dei volti dei giocatori cruciale per trovare i gemelli questa funzione è utile solo per i supporters.
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Bonus squadra madre)
+LoyaltyDisplay.loyaltyBonus=(bonus fedeltà)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Questo giocatore ha %1 possibile gemello.;Questo giocatore ha %1 possibili gemelli.
@@ -409,6 +417,7 @@ PlayerStatsExperience.NotAllMatchesVisible=Il valore effettivo potrebbe essere p
 PlayerStatsExperience.NoSkillUpFound=Il valore effettivo potrebbe essere più alto, perché non è stato trovato nessuno scatto per l'esperienza.
 PlayerStatsExperience.ExperienceChange.title=Guadagno esperienza
 PlayerStatsExperience.ExperienceChange.title.abbr=XP +
+PlayerStatsExperience.Walkover=Questa partita è un walk over. Perciò nessun giocatore ha acquisito esperienza.
 
 #Series statistics
 rating.average=Valutazione media
