--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -18,7 +18,9 @@ pluralFormRuleID=pluralFormRule1
 # Module descriptions
 # WARNING: your module description has to have the name module.MODULE_NAME.desc
 module.LineupShortcut.desc=Legg til en snarvei til lagoppstillingen på spillerens kamp historie
+module.LineupShortcut.HighlightPlayer.desc=Uthev spiller i lagoppstillingen med gul farge når man navigerer til lagoppstillingssiden via snarvei, ved å erstatte HT utheving.
 module.SmallerPages.desc=Reduserer dimensjonen av noen sider til å tilpasse seg til små skjermer
+module.SmallerPages.ReduceBid.desc=Flytt budet ved siden av ferdighetene og fjern alle tekst slik at bare tallene står igjen (nåværende bud og tid)
 module.ForumTemplates.desc=Tillat omgjøring fra forumpost til mal for senere bruk
 module.ForumPreview.desc=Tillat å vise en forhåndsvisning av en post (Fungerer også for HT-mail)
 module.AddLeaveConfButton.desc=Legg til en "Forlat forum" knapp i hver forummappe
@@ -52,7 +54,11 @@ module.HTDateFormat.LocalSeason.desc=Vis den lokale sesongen istedet for den glo
 module.StaffMarker.desc=Merk de overordnedes nick på forumene. I tekstboksene kan du velge ditt egne tekstformat (HTML tekstformat kjennetegn)  (HTML style attribute).
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Vis en lenkebar for ungdomslaget (Fungerer også fot mail)
+module.ForumYouthIcons.debug.desc=Legg til ikon for FoxTrick debuglogg
+module.ForumYouthIcons.settings.desc=legg til ikon for FoxTrick-innstillinger
+module.ForumYouthIcons.tournament.desc=Legg til ikon for turnerings-ID
 #FormatPostingText
+module.FormatPostingText.desc=Erstatter FoxTrick HT-ML tags med HTML tags (dvs. 'pre' element)
 #EmbedMedia
 module.EmbedMedia.EmbedYoutubeVideos.desc=Sett inn YouTube-video
 module.EmbedMedia.EmbedVimeoVideos.desc=Legg til Vimeo-videoer
@@ -81,6 +87,11 @@ module.LinksAchievements.desc=Legger til noen lenker til prestasjonssiden
 module.LinksStaff.desc=Legger til noen lenker til   ansattsiden
 module.ForumAlterHeaderLine.desc=Forandrer posting header
 # please translate next lines again if needed
+module.TeamStats.Speciality.desc=Spesialitet
+module.TeamStats.Personality.desc=Personlighet
+module.TeamStats.Status.desc=Status (kort/skader)
+module.ExtraPlayerInfo.Flag.desc=Vis spillernes nasjonalitet med flagg.
+module.SeniorTeamShortCuts.AllPages.desc=Vis på alle sider
 #ExtendedPlayerDetails
 module.ExtendedPlayerDetails.SWD.desc=Vis kontraktvarighet som sesonger – uker – dager
 module.ExtendedPlayerDetails.SW.desc=Vis kontraktvarighet som sesonger – uker
@@ -141,13 +152,27 @@ HistoryStats.season.short=S
 HistoryStats.cup=Cup runde
 HistoryStats.cup.short=C
 HistoryStats.league=Serie
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=Endelig ligaplassering
+HistoryStats.finalPosition.short=P
+HistoryStats.cupwinner=Cupvinner
+HistoryStats.cupwinner.short=CV
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.future=Spilleren kan forfremmes om %1 dag, den %2.;Spilleren kan forfremmes om %1 dager, den %2.
+YouthPromotes.today=Spilleren kan forfremmes i dag\!
 
 #teamstats+filters
 TeamStats.boxheader=Lagoversikt
+TeamStats.PlayerNotToOld=Spillere under 19 år
+TeamStats.PlayerToOld=Spillere som har fylt 19
+TeamStats.Cards=Kort
+TeamStats.Injured=Skadet
+TeamStats.TransferListed=På transferlisten
+TeamStats.Pictures=Ansikter
+TeamStats.PlayedLatest=Spilte forrige kamp
+TeamStats.NotPlayedLatest=Spilte ikke forrige kamp
 TeamStats.HomeGrownPlayers=Moderklubbspillere
 TeamStats.PurchasedPlayers=Kjøpte spillere
 TeamStats.FilterFor=Filtrer på
@@ -175,6 +200,7 @@ seasonstats.masters=Masters
 #Newsfeed filter
 LeagueNewsFilter.label=Newsfeed filteret\:
 LeagueNewsFilter.all=Alle
+LeagueNewsFilter.friendlies=Vennskapskamper & trenerskifter
 LeagueNewsFilter.transfers=Overganger
 LeagueNewsFilter.lineupChanges=Lagoppstilling utskiftninger
 
@@ -192,6 +218,8 @@ MedianTransferPrice.average=Gjennomsnittspris
 #forum
 AddLeaveConfButton.LeaveForum=forlat liga
 AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
+ShowForumPrefButton.forumPreferences=Foruminnstillinger
+EmbedMedia.EmbeddedImage=Vedlagt Bilde
 
 # ForumTemplates
 ForumTemplates.make=Lag mal av post
@@ -208,9 +236,16 @@ ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
 ForumYouthIcons.youthseries=legg til link til ungdomsliga
+ForumSpecialBBCode.q=Legg til utsagn
 ForumSpecialBBCode.br=legg til linjeskift
 ForumSpecialBBCode.user=legg til brukerid
 ForumSpecialBBCode.article=legg til artikkelid
+ForumSpecialBBCode.spoiler=Legg til spoiler
+ForumSpecialBBCode.pre=Sett inn 'pre' formatteringstag
+ForumSpecialBBCode.tableSeparator=Gjør om "%s" til celler
+ForumSpecialBBCode.enterSeparator=Skriv inn en alternativ separator
+ForumSpecialBBCode.forumSymbol=Sett inn "%s"
+ForumSpecialBBCode.symbols=Sett inn symbol\: %s
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick Filtere
@@ -220,6 +255,8 @@ TransferSearchFilters.saveFilter=Lagre nytt filter
 
 #Filter
 Filters.clear=Nullstill
+Filters.noFilter=Ikke filter
+Filters.none=Ingen
 Filters.days=Dager
 Filters.tsi=TSI
 Filters.stamina=Kondisjon
@@ -227,8 +264,13 @@ Filters.Form=Form
 Filters.XP=Rutine
 Filters.specialty=Spesialitet
 Filters.stars=Stjerner
+Filters.over=Over
+Filters.under=Under
+Filters.equal=Lik
+Filters.notEqual=Ulik
 
 
+match.type.league=Liga
 match.type.qualification=Kvalifisering
 match.type.cup=Cup
 match.type.friendly=Treningskamp
@@ -243,7 +285,9 @@ match.type.youth.friendly.cup=Ungdomstreningskamp (Cupregler)
 matchOrder.noMatchSelected=Ingen kamp valgt
 matchOrder.comparedTo=Sammenlignet med\:
 matchOrder.AddMatchManually=Legg til en kamp manuelt
+matchOrder.swapPositions=Speilvend
 matchOrder.options=Alternativer
+matchOrder.staminaDiscount=Kondisjonseffekt
 matchOrder.summary=Sammendrag
 
 #Skills
@@ -314,8 +358,13 @@ SkillTable.showTimeInClub=Vis tid i klubben
 SkillTable.switchView.title=Endre visningen av tabellen.
 SkillTable.addHomegrown.title=Legger til alle egenproduserte spillere fra den nåværende seniorstallen
 SkillTable.showTimeInClub.title=Viser tid siden spilleren ble medlem av klubbens seniorstall
+PlayerNumber=Spiller nummer
+PlayerNumber.abbr=\#
+TSI=Total Skill Index
 TSI.abbr=TSI
+CanBePromotedIn.abbr=Oppr
 Personality=Personlighet
+Agreeability=Medgjørlighet
 Agreeability.abbr=Ag
 Aggressiveness=Aggresjon
 Aggressiveness.abbr=Ag
@@ -371,6 +420,7 @@ Current_club=Nåværende klubb
 Current_club.abbr=Klubb
 Current_league=Gjeldende league
 Current_league.abbr=Serie
+JoinedSince=Medlem siden
 JoinedSince.abbr=Siden
 Hotlist=favorittliste
 Hotlist.abbr=meget interessert
@@ -491,6 +541,7 @@ NextMatch=Neste kamp
 AddNextMatch=Legge til neste kamp i HT-Live
 LastLineup=Siste lagoppstilling
 YouthMatches=Ungdoms kamper
+Tournaments=Turneringer
 more=mer..
 less=mindre..
 
@@ -526,6 +577,7 @@ truthTable.predicted_position=\#
 truthTable.name=Lag
 truthTable.real_position=Reell pos.
 truthTable.difference=±
+truthTable.tableAtHTMS=Denne tabellen på HTMS hjemmesiden
 
 # HTMSPoints
 HTMSPoints=HTMS Poeng\:
@@ -548,6 +600,7 @@ MyMonitor.removeTeamFormat=%n (% t, \# % i)
 MyMonitor.type.senior=Senior
 MyMonitor.type.youth=Ungdom
 MyMonitor.type.nt=nasjonal
+MyMonitor.htLive=HT Live
 
 # tickers
 ticker.type.welcome=Velkomstmelding
@@ -591,9 +644,13 @@ button.save=Lagre
 button.go=gå til
 button.add=Legg til
 button.remove=Fjern
+button.top=Topp
+button.authorize=Autoriser
 button.export=Largre
 button.import=Importer
 button.restoreDefault=Gjenopprett standandinnstillinger
+button.deleteToken=Slett token
+button.disableAll=Deaktiver alle
 button.revokePermissions=Fjern tillatelser
 button.copy=Kopier
 button.up=Opp
@@ -620,6 +677,7 @@ exception.error=Feil %s
 # keep the following line untranslated
 
 
+specialCopy.hint=Kopier merket tekst med Ctrl + C.
 
 # End of IN-GAME STRINGS.
 
@@ -633,7 +691,13 @@ TeamPopupLinks.ShowOnMore=Vis på mer
 TeamPopupLinks.OpenNewTab=Åpne i ny fane
 
 #toolbar
+toolbar.title=FoxTrick
 toolbar.disableTemporary=Deaktiver midlertidig
+toolbar.featureHighlight=Uthev funksjonalitet
+toolbar.translationKeys=Vis oversettelsesnøkler
+toolbar.preferences=Innstillinger
+status.active=aktiv
+status.enabled=aktivert, men ikke aktiv på %s
 status.disabled=deaktivert
 
 # Captions and labels of foxtrick preferences
@@ -642,6 +706,8 @@ prefs.title=Innstillinger
 prefs.view.by.category=Kategorivisning
 prefs.view.by.page=Vis for siste HT-side
 
+module.screenshot=Skjermbilde
+module.link=Du kan kopiere og lime inn denne linken på forumet for å dirigere hit
 
 # tabs in preferences page
 #tabs
@@ -654,18 +720,37 @@ tab.presentation=Utseende
 tab.matches=Kamper
 tab.forum=Forum
 tab.links=Lenker
+tab.alert=Varsel
+tab.about=Om
+tab.changes=Endringer
+tab.help=Hjelp
 
+prefs.setup.desc=FoxTrick fant disse innstillingene. Hvis dette ikke stemmer, {vennligst rapporter det}.
 prefs.setup.dateFormat=Datoformat
 prefs.setup.country=Land
 
 prefs.storedData.title=Lagrede innstillinger
 # NOTE - please preserve the braces, inner content will be converted to link
 
+prefs.disable.title=Deaktiver FoxTrick
+prefs.disable.temporary=Deaktiver midlertidig
+
+prefs.loadSave.export.prefs=Innstillinger
 
 
 
+link.title=Lenker
+link.homepage=Hjemmeside
+link.bugTracker=Rapporter bug
+link.hattrickForum=FoxTrick form hos Hattrick
+link.screenshots=Skjermbilder
+link.nightlyFirefox=Utviklingsbygg for Firefox
+link.nightlyChrome=Utviklingsbygg for Google Chrome
+link.nightlyOpera=Utviklingsbygg for Opera
+link.nightlySafari=Utviklingsbygg for Safari
+link.recentChanges=Siste endringer
 
-
+releaseNotes.version=Versjon\:
 
 about.developers=Utviklere
 about.translators=Oversettere
