--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -128,6 +128,7 @@ module.LinksAchievements.desc=Başarılar sayfasına birkaç dış sayfa linki e
 module.LinksStaff.desc=Çalışanlar sayfasına birkaç dış sayfa linki ekler
 module.LinksTracker.desc=Milli takım ve oyuncu sayfalarına birkaç takip edici link ekler
 module.LinksClubTransfers.desc=Transferler sayfasına birkaç dış sayfa linki ekler
+module.LinksWorld.desc=Dünya sayfasına harici linkler ekler
 module.LoyaltyDisplay.desc=Oyuncunun kendi sayfasında sadakat ve ana kulüp bonusunu vurgular (Sadece "Yetenek çubuğunu göster" seçeneği HT tercihlerinden açılmışsa seçenek çalışır)
 module.ForumAlterHeaderLine.desc=Mesaj başlık çizgisini değiştirir
 module.Singleline2.desc=Alternatif ForumHeader tek çizgi modülü. Diğer versiyonlardan biraz daha hızlı. Forum mesajı değişim modülü ile çakışan özellikler devre dışı bırakılır.
@@ -174,6 +175,8 @@ module.TeamStats.General.desc=Genel bilgi (TSI/yaş)
 module.TeamStats.Speciality.desc=Özel yetenek
 module.TeamStats.Personality.desc=Kişilik
 module.TeamStats.Status.desc=Durum (kartlar/sakatlıklar)
+module.TeamStats.Skills.desc=Yetenekler
+module.TeamStats.Match.desc=Maç
 module.TeamStats.Current_league.desc=Şu anki lig
 module.ExtraPlayerInfo.desc=Oyuncular sayfasında oyuncuların ekstra bilgilerini göster.
 module.ExtraPlayerInfo.CoachInfo.desc=Eski ve mevcut antrenörlerin bilgilerini göster.
@@ -370,6 +373,7 @@ module.SupporterStatsEnhancements.desc=Mevcut takım oyuncularını taraftarlık
 module.MobileEnhancements.desc=Cep telefonları için geliştirmeler
 module.MatchOrderInterface.desc=Maç talimatları arayüzünü ayarları
 module.MatchOrderInterface.PlayedLastMatch.desc=Son maçta oynayan oyuncuları işaretler ve son pozisyonlarını ve oynadıları zamanı detaylar kutusunda gösterir
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Turnuva maçları için etkisizleştir
 module.MatchOrderInterface.Specialties.desc=Oyuncu özel yeteneklerini göster
 module.MatchOrderInterface.StayOnPage.desc=Dizilişi kaydettikten sonra maç talimatı sayfasında kal
 module.MatchOrderInterface.SwapPositions.desc=Oyuncuları soldan sağa dizmek çin bir bağlantı ekle
@@ -384,21 +388,28 @@ module.RatingsDisplay.desc=Ortalama değerleri farklı şekilde gösterir
 module.RatingsDisplay.DenominationsRange.desc=0-20 aralığı içinde
 module.RatingsDisplay.HatStats.desc=HatStats
 module.RatingsDisplay.HTSums.desc=Toplu Hattrick reytingleri olarak
+module.PlayerStatsExperience.desc=playerStats'ta oyuncunun tecrübesinin alt beceri düzeyini gösterir
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Ana kulüp bonusu)
+LoyaltyDisplay.loyaltyBonus=(Sadakat bonusu)
 
 #Youth-Twins
 YouthTwins.possibleTwins=Bu oyuncunun %1 olası ikizi var.;Bu oyuncu, %1 olası ikizleri var.
 YouthTwins.markedTwins=İkiz olarak işaretlenmiş\: %1
 YouthTwins.undecidedTwins=Henüz işaretlenmemiş\: %1
+YouthTwins.nonHyUser=Oyuncunun potansiyeli hakkında detaylı biligiyi hattrick youthclubda bulabilirsiniz.
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=28 tecrübe puanının %1 veya %2 puanını topladı. Tecrübesi %3 veya %4 civarında.
+PlayerStatsExperience.NotAllMatchesVisible=Tüm maçlar gösterilmediği için gerçek değer daha yüksek olabilir.
 PlayerStatsExperience.ExperienceChange.title=Tecrübe kazanımı
 PlayerStatsExperience.ExperienceChange.title.abbr=XP +
+PlayerStatsExperience.Walkover=Hükmen biten bir maç. Bu yüzden oyuncu tecrübe kazanamadı.
 
 #Series statistics
 rating.average=Ortalama reyting
