--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -168,6 +168,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player col
 module.MatchReportFormat.desc=Presentation of the report line by line according to match events.
 module.MatchReportFormat.ShowEventIcons.desc=Add event specific icons.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team colouring
+module.LiveMatchReportFormat.desc=Presentation of the HT-Live and the HT Re-Live report line by line, according to match events with event specific icons.
 module.ForumRedirManagerToTeam.desc=Redirect links from manager page to team page on forum links
 module.ManagerButtons.desc=Add or change manager buttons on manager and team page
 module.ManagerButtons.GuestBook.desc=Adds Write in Guestbook link to manager page and team page
