*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9456 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -166,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separere egne spiller f
 module.MatchReportFormat.desc=Præsentation af kamprapporten linie for linie i henhold til kamp begivenheder.
 module.MatchReportFormat.ShowEventIcons.desc=Tilføj specifikke ikoner for begivenheder.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separere eget hold farvning
+module.LiveMatchReportFormat.desc=Præsentation af HT-Live og HT Re-Live kamp rapport linie for linie, i henhold til kamp hændelser med event specifikke ikoner.
 module.ForumRedirManagerToTeam.desc=Omdirigere links fra manager side til hold side på forum links
 module.ManagerButtons.desc=Tilføje eller ændre manager knapper på manager og hold side
 module.ManagerButtons.GuestBook.desc=Tilføjer skriv i gæstebog link til manager og hold side
