--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -381,6 +381,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played 
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Also highlight on the field
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disable for tournaments matches
 module.MatchOrderInterface.Specialties.desc=Show player specialties
+module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
 module.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 module.MatchSimulator.desc=Adds a match simulator to the match order interface.
