--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -166,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado de
 module.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
 module.MatchReportFormat.ShowEventIcons.desc=Agregar iconos específicos de evento.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separate el coloreado del equipo propio
+module.LiveMatchReportFormat.desc=Presentación de los reportes HT-Live y HT-ReLive linea por linea, de acuerdo con los eventos y los iconos específicos de los eventos.
 module.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 module.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 module.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
