--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Odvojeno bojanje vlasti
 module.MatchReportFormat.desc=Prikaz događaja u izvješću 'red po red'. Ispod možete postaviti vlastite boje prikaza.
 module.MatchReportFormat.ShowEventIcons.desc=Dodaj određene ikone za događaje.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Odvojeno bojanje vlastite momčadi
+module.LiveMatchReportFormat.desc=Izgled HT-live i reprize HT-live prikaži kao liniju po liniju, prema događajima i s određenim ikonama.
 module.ForumRedirManagerToTeam.desc=Preusmjeriti link kor. imena na forumu sa korisnikove stranice na stranicu korisnikovog kluba
 module.ManagerButtons.desc=Dodavanje ili promjena tipki na menadžerskoj i momčadskoj stranici
 module.ManagerButtons.GuestBook.desc=Dodaje Pisati na link za Knjigu gostiju na menadžerskoj i momčadskoj stranici
