--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -90,6 +90,7 @@ module.ForumAlterHeaderLine.desc=Forandrer posting header
 module.TeamStats.Speciality.desc=Spesialitet
 module.TeamStats.Personality.desc=Personlighet
 module.TeamStats.Status.desc=Status (kort/skader)
+module.TeamStats.Match.desc=Kamp
 module.ExtraPlayerInfo.Flag.desc=Vis spillernes nasjonalitet med flagg.
 module.SeniorTeamShortCuts.AllPages.desc=Vis på alle sider
 #ExtendedPlayerDetails
@@ -101,6 +102,9 @@ module.ExtendedPlayerDetails.D.desc=Vis kontraktvarighet som dager
 #ExtraShortcuts
 #CopyMatchID
 module.HeaderFix.desc=Ordner overskriften mens du scroller
+module.CopyYouth.TrainingReport.desc=Treningsrapport
+module.CopyYouth.ScoutComment.desc=Speiderkommentar
+module.LeagueNewsFilter.transfers.desc=Vis bare overganger
 #MoveManagerOnline
 module.TeamPopupLinks.desc=Vis et lite pop-up vindu med hurtiglenker når du sveiper over en lag-id-link
 module.TeamPopupLinks.Team.desc=Lenke til Laget (kun for managerlenker)
@@ -112,7 +116,10 @@ module.TeamPopupLinks.SendMessage.desc=Lenke til Send melding
 module.TeamPopupLinks.Challenge.desc=Lenke til Utfordre
 module.TeamPopupLinks.Achievements.desc=Lenke til Prestasjoner
 module.TeamPopupLinks.TransferHistory.desc=Lenke til overganger
+module.TeamPopupLinks.TeamHistory.desc=Klubbhistorie
 module.TeamPopupLinks.LastLineup.desc=Lenke til siste lagoppstilling
+module.TeamPopupLinks.NextMatch.desc=Neste kamp
+module.TeamPopupLinks.Tournaments.desc=Turneringer
 module.TeamPopupLinks.Coach.desc=Lenke til treneren
 module.SkillColoring.desc=Bedre visualisering av skillsene
 module.SkillColoring.skill_color.desc=Farger skillsene
@@ -122,16 +129,23 @@ module.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.ek
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+module.SeriesFlags.Guestbook.desc=Vis i gjestebok
+module.SeriesFlags.Supporters.desc=Vis i supporterfeltet
+module.SeriesFlags.Visitors.desc=Vis i tidligere besøkende-feltet
+module.MyMonitor.TeamIcons.desc=Vis laglogoer
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Moderklubb-bonus)
+LoyaltyDisplay.loyaltyBonus=(Lojalitetsbonus)
 
 #Youth-Twins
 
 #PlayerStatsExperience
+PlayerStatsExperience.Walkover=Denne kampen endte med walkover. Derfor fikk spillerne ingen rutine.
 
 #Series statistics
 
@@ -165,6 +179,9 @@ YouthPromotes.today=Spilleren kan forfremmes i dag\!
 
 #teamstats+filters
 TeamStats.boxheader=Lagoversikt
+TeamStats.Skills=Ferdigheter
+TeamStats.Players=Spillere
+TeamStats.Average=Gjennomsnitt
 TeamStats.PlayerNotToOld=Spillere under 19 år
 TeamStats.PlayerToOld=Spillere som har fylt 19
 TeamStats.Cards=Kort
@@ -178,6 +195,10 @@ TeamStats.PurchasedPlayers=Kjøpte spillere
 TeamStats.FilterFor=Filtrer på
 
 #PlayerBirthday
+PlayerBirthday.boxheader=Fødselsdager
+PlayerBirthday.BirthdayToday=Fødselsdager i dag
+PlayerBirthday.BirthdayLastWeek=Fødselsdager forrige uke
+PlayerBirthday.BirthdayNextWeek=Fødselsdager neste uke
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -219,6 +240,7 @@ MedianTransferPrice.average=Gjennomsnittspris
 AddLeaveConfButton.LeaveForum=forlat liga
 AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
 ShowForumPrefButton.forumPreferences=Foruminnstillinger
+MarkUnread.markunread=Marker som ulest herfra
 EmbedMedia.EmbeddedImage=Vedlagt Bilde
 
 # ForumTemplates
@@ -228,10 +250,12 @@ ForumTemplates.delete.ask=Slett mal?
 
 #ForumPreview
 ForumPreview.preview.title=Forhåndsvis posten
+ForumPreview.preview=Forhåndsvis
 
 #ForumYouthIcons
 ForumYouthIcons.toolbar.main=Hovedlenker
 ForumYouthIcons.toolbar.youth=Juniorlenker
+ForumYouthIcons.toolbar.tournament=Turneringer
 ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
@@ -254,6 +278,7 @@ TransferSearchFilters.deleteFilter.ask=Er du sikker på at du vil slette dette f
 TransferSearchFilters.saveFilter=Lagre nytt filter
 
 #Filter
+Filters.ok=OK
 Filters.clear=Nullstill
 Filters.noFilter=Ikke filter
 Filters.none=Ingen
@@ -264,6 +289,8 @@ Filters.Form=Form
 Filters.XP=Rutine
 Filters.specialty=Spesialitet
 Filters.stars=Stjerner
+Filters.minimum=Minst
+Filters.maximum=Maksimalt
 Filters.over=Over
 Filters.under=Under
 Filters.equal=Lik
@@ -289,6 +316,7 @@ matchOrder.swapPositions=Speilvend
 matchOrder.options=Alternativer
 matchOrder.staminaDiscount=Kondisjonseffekt
 matchOrder.summary=Sammendrag
+matchOrder.tournamentMatch=Turnering
 
 #Skills
 Playmaking=Ballfordeling
@@ -378,6 +406,8 @@ Stamina=Kondisjon
 Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
+Loyalty=Lojalitet
+Loyalty.abbr=Lo
 MotherClubBonus.abbr=MB
 Status=Status
 Status.abbr=Status
@@ -461,6 +491,7 @@ links.custom.addpersonallink=Legg til personlig link
 links.custom.addlink=Legg til link
 links.custom.remove=Fjern
 links.custom.copy=Kopier
+links.custom.export=Eksporter
 links.custom.confirmremove=Vil du virkelig fjerne?
 links.custom.addtag=Legg til en tagg
 links.custom.tags=Tagger
@@ -563,6 +594,8 @@ TransferSearchResultFilters.days=Dager\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vis
+RapidId.tournaments=Turneringer
+RapidId.tournament=Turnering
 
 # HTMSPrediction
 HTMSPrediction.prediction=Forutsagte resultat
@@ -674,6 +707,7 @@ api.clearCache=Tøm buffer
 
 exception.error=Feil %s
 
+log.header=FoxTrick logg
 # keep the following line untranslated
 
 
@@ -752,6 +786,7 @@ link.recentChanges=Siste endringer
 
 releaseNotes.version=Versjon\:
 
+about.copyright=Opphavsrett
 about.developers=Utviklere
 about.translators=Oversettere
 about.designers=Designere
