--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -93,6 +93,7 @@ module.TeamStats.Speciality.desc=Спеціалізація
 module.TeamStats.Personality.desc=Особистість
 module.TeamStats.Status.desc=Статус (картки/вилучення)
 module.TeamStats.Current_league.desc=Поточна ліга
+module.HistoryStats.desc=Додає історичну статистику команди.
 module.LargeFlags.desc=Замінює маленький прапор країни на сторінці гравця на більший
 module.GoToPostBox.desc=Додає поле 'Перейти до повідомлення X' на сторінці форуму
 module.TeamSelectBox.desc=Замінює список гравців на випадаюче меню на сторінці гравців. Щоб швидко перемкнутись з одного вигляду на інший просто натисніть на заголовку віконця 'Огляд'.
@@ -201,7 +202,17 @@ ExtraShortcuts.prefs=Налаштування
 ExtraShortcuts.ftprefs=Налаштування FoxTrick
 
 #HistoryStats
+HistoryStats.boxheader=Історична статистика
+HistoryStats.season=Сезон
+HistoryStats.season.short=С
+HistoryStats.cup=Раунд кубку
+HistoryStats.cup.short=К
+HistoryStats.league=Ліга
+HistoryStats.league.short=Ліга
+HistoryStats.finalPosition=Кінцева позиція в лізі
+HistoryStats.finalPosition.short=П
 HistoryStats.cupwinner=Володар Кубка
+HistoryStats.cupwinner.short=ВК
 
 # YouthPromotes
 #following string uses pluralForms
@@ -349,6 +360,8 @@ matchOrder.previousPrediction=Попередній прогноз
 matchOrder.AddMatchManually=Додати матч вручну
 matchOrder.options=Опції
 matchOrder.staminaDiscount=Вплив витривалості
+matchOrder.attVsDef=Напад проти захисту
+matchOrder.attVsDef.title=Відображати рейтинги опонента як напад-проти-захисту чи напад-проти-нападу
 matchOrder.summary=Резюме
 
 #Skills
