Russian translation update to r9457
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9458 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=Russian
-properties.version=r9325
+properties.version=r9457
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Отдельная по
 module.MatchReportFormat.desc=Отчёт о матче в виде построчного представления согласно последовательности событий.
 module.MatchReportFormat.ShowEventIcons.desc=Добавлять соответствующие событиям значки.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Отдельная подсветка своей команды
+module.LiveMatchReportFormat.desc=Представление отчётов HT-Live и HT Re-Live строка за строкой, в порядке следования событий, с соответствующим событию значком.
 module.ForumRedirManagerToTeam.desc=Перенаправлять ссылки с форума со страницы менеджера на страницу его клуба
 module.ManagerButtons.desc=Добавить или изменить кнопки на страницах менеджера и клуба
 module.ManagerButtons.GuestBook.desc=Добавляет ссылку 'Написать в гостевую книгу' на страницах менеджера и клуба
@@ -376,7 +377,10 @@ module.SupporterStatsEnhancements.desc=Подсвечивать всё ещё н
 module.MobileEnhancements.desc=Набор улучшений для мобильных устройств
 module.MatchOrderInterface.desc=Улучшения интерфейса отдачи указаний на матч.
 module.MatchOrderInterface.PlayedLastMatch.desc=Подсвечивать игравших в предыдущем матче игроков и показывать игровую позицию и сыгранное время в окне с навыками
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Также подсвечивать на поле
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Не учитывать матчи турниров
 module.MatchOrderInterface.Specialties.desc=Показывать специализации игроков
+module.MatchOrderInterface.ShowFaces.desc=Показывать лица игроков вместо футболок для будущих и прошлых расстановок
 module.MatchOrderInterface.StayOnPage.desc=Оставаться на странице указаний после отправки
 module.MatchOrderInterface.SwapPositions.desc=Ссылка для общего перемещения игроков с фланга на другой фланг
 module.MatchSimulator.desc=Добавить симулятор матча на страницу расстановки.
@@ -415,6 +419,7 @@ PlayerStatsExperience.NotAllMatchesVisible=Действительное знач
 PlayerStatsExperience.NoSkillUpFound=Действительное значение может быть выше, поскольку записей о повышении опыта не найдено.
 PlayerStatsExperience.ExperienceChange.title=Приобретённый опыт
 PlayerStatsExperience.ExperienceChange.title.abbr=Оп+
+PlayerStatsExperience.Walkover=Команде засчитано техническое поражение, вследствие этого игроки не получили какого-либо опыта.
 
 #Series statistics
 rating.average=Средний рейтинг
