--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -13,6 +13,13 @@
 		<item>Пожалуйста, смотрите <xhtml:a href="http://code.google.com/p/foxtrick/source/list">историю изменений</xhtml:a> на сайте Google Code для полного списка изменений.</item>
 	</note>
 
+	<note version="0.9.3">
+		<item>● Модуль <module>MatchOrderInterface</module>: добавлен параметр (включён по умолчанию) для исключения матчей турнира из информации о последних матчах и подсветки</item>
+		<item>● Модуль <module>MatchOrderInterface</module>: исправлена ошибка с нерабочим индикатором playedLastMatch в Firefox</item>
+		<item>● Модуль <module>PlayerStatsExperience</module>: исправлена ошибка с учётом полученной красной карточки как пропуска игры из-за технического поражения</item>
+		<item>● Модуль <module>PlayerStatsExperience</module>: исправлена работа модуля в Firefox 3.6</item>
+	</note>
+
 	<note version="0.9.2">
 		<item>● Очередное массовое обновление переводов. Снова всем спасибо за эти обновления.</item>
 		<item>● Полностью переписано автоматическое определение языка. Больше не должно ломаться.</item>
@@ -34,10 +41,11 @@
 		<item>● Модуль <module>ShowLineupSet</module>: учтены последние изменения в HT и исправлен простой стиль страницы.</item>
 		<item>● Исправлена ошибка с недоступным id игрока в закладках.</item>
 		<item>● Исправлено определение среднерыночной цены для некоторых языков.</item>
+		<item>● Модуль <module>MatchOrder</module>: подсветка игроков, игравших в предыдущем матче, видна не только в списке, но и на поле.</item>
 		<item>● Некоторые изменения для совместимости с <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a>.</item>
 		<item></item>
 		<item><xhtml:b>Для пользователей Google Chrome:</xhtml:b></item>
-		<item>Похоже, что у системы дополнительных разрешений Chrome существует проблема с отзывом и дальнейшим передобавлением разрешений. Единственное известное решение, если Вам нужно вернуть ранее отозванное разрешение - переставить FoxTrick.</item>
+		<item>Похоже, что система дополнительных разрешений браузера Chrome 18 работает с ошибками. Модули, которые её используют (HTY staffmarker и EmbedMedia), могут не работать.</item>
 	</note>
 
 	<note version="0.9.1">
