*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9459 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -379,6 +379,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Fremhæver spillere der spillede
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Fremhæv også på banen
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=﻿Deaktivere for turnerings kampe
 module.MatchOrderInterface.Specialties.desc=Vis spillere specialiteter
+module.MatchOrderInterface.ShowFaces.desc=Vis spiller ansigter i stedet for dragter til fremtidige og gamle holdopstillinger
 module.MatchOrderInterface.StayOnPage.desc=Bliv på kampordre siden efter afgivning af ordre
 module.MatchOrderInterface.SwapPositions.desc=Tilføj et link til at bytte spillere fra venstre til højre
 module.MatchSimulator.desc=Tilføjer en kamp simulator til kampordre inter-facet.
