--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -379,6 +379,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Resaltar jugadores que jugaron e
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Tambien resaltar en el campo
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Deshabilitar para los partidos de torneos
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidad jugadores
+module.MatchOrderInterface.ShowFaces.desc=Mostrar las caras de los jugadores en vez de la remera para alineaciones viejas y futuras
 module.MatchOrderInterface.StayOnPage.desc=Quedarse en la página de órdenes del partido después de guardar la alineación
 module.MatchOrderInterface.SwapPositions.desc=Añadir un enlace para cambiar los jugadores de izquierda a derercha
 module.MatchSimulator.desc=Agregar el simulador a la interfaz de orden de partidos. 
