--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -380,6 +380,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Ističe igrača koji je igrao u 
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Također označi i na terenu
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Onemogući za utakmice turnira
 module.MatchOrderInterface.Specialties.desc=Pokaži specijalnosti
+module.MatchOrderInterface.ShowFaces.desc=Pokaži lica igrača umjesto dresa za buduće i prethodne postave
 module.MatchOrderInterface.StayOnPage.desc=Ostanite na stranici postavljanja taktike nakon spremanja naloga
 module.MatchOrderInterface.SwapPositions.desc=Dodaj link za mijenjanje igrača s lijeva na desno
 module.MatchSimulator.desc=Dodaje simulator utakmica na sučelje postavljanja taktike. 
