--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -166,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Ne pas colorier vos jou
 module.MatchReportFormat.desc=Présentation du compte-rendu des matchs ligne par ligne selon les événements du match. Vous pouvez définir les couleurs personnalisées ci-dessous\:
 module.MatchReportFormat.ShowEventIcons.desc=Ajouter des icônes pour les événements spéciaux (SE)
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Ne pas surligner votre équipe
+module.LiveMatchReportFormat.desc=Présentation du HT-Live et du HT Re-Live ligne par ligne en accord avec les événements du match dotés de leurs icônes spécifiques.
 module.ForumRedirManagerToTeam.desc=Redirige les liens du Forum vers la page Général du club au lieu de la page Manager.
 module.ManagerButtons.desc=Ajouter ou modifier les icônes de gestion sur les pages de manager et d'équipe
 module.ManagerButtons.GuestBook.desc=Ajout d'un lien pour écrire dans le livre d'or dans les pages de manager et d'équipe
@@ -378,6 +379,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Mettre en évidence les joueurs 
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Également mettre en évidence sur le terrain
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Désactiver pour les matchs de tournoi
 module.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
+module.MatchOrderInterface.ShowFaces.desc=Montrer le visage de vos joueurs à la place du maillot dans les compositions
 module.MatchOrderInterface.StayOnPage.desc=Rester sur la page d'ordre de match après avoir sauvegardé
 module.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
 module.MatchSimulator.desc=Ajoute un simulateur à l'interface d'ordre de match
